SET(SRCS Dummy.cpp)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src ${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_LIBRARY(multi-agent-systems SHARED ${SRCS})
IF (Boost_UNIT_TEST_FRAMEWORK_FOUND AND WITH_TEST)
  TARGET_LINK_LIBRARIES(multi-agent-systems -fprofile-arcs)
ENDIF (Boost_UNIT_TEST_FRAMEWORK_FOUND AND WITH_TEST)
